--- a/energy/templates/energy/form_template.html
+++ b/energy/templates/energy/form_template.html
@@ -29,6 +29,19 @@
                         <input type="file" id="id_image" maxlength="30" name="imag">
                     </div>
                     </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2">请选择发布类型:</label>
+
+                    <div class="col-sm-2">
+                        <select style="width: 300px; font-size: 14px">
+
+                            {% for type in all_types %}
+                                            <option value="{{ type }}">{{ type }}</option>
+                                {% endfor %}
+                        </select>
+
+                    </div>
+                </div>
 
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
