ti jiao dao ubuntu

--- a/energy/templates/energy/forum.html
+++ b/energy/templates/energy/forum.html
@@ -2,7 +2,6 @@
 {% extends 'energy/base.html' %}
 {% block body_block %}
 <div class="aw-container-wrap">
-
 	<div class="container">
 		<div class="row">
 			<div class="aw-content-wrap clearfix">
@@ -39,225 +38,28 @@
 					<div class="aw-mod aw-explore-list">
 						<div class="mod-body">
 							<div class="aw-common-list">
-								<div class="aw-item " data-topic-id="224,550,">
-	<a class="aw-user-name hidden-xs" data-id="385" href="http://wenda.golaravel.com/people/wuangv" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
+
+                                {% for message in messages %}
+<div class="aw-item " data-topic-id="299,">
+	<a class="aw-user-name hidden-xs" data-id="613" href="http://wenda.golaravel.com/people/ssoor" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
 		<h4>
-						<a href="http://wenda.golaravel.com/question/756"> laravel 5  可以添加一些自己全局函数吗</a>
+						<a href="#">{{ message.title }}</a>
 					</h4>
 				<div class="pull-right hidden-xs contribute">
 			<span class="pull-right text-color-999">贡献</span>
-		    		    <a class="aw-user-name" data-id="758" href="http://wenda.golaravel.com/people/yushi" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/07/58_avatar_mid.jpg" alt="" /></a>
-		    		    <a class="aw-user-name" data-id="5417" href="http://wenda.golaravel.com/people/Eearnp" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/54/17_avatar_mid.jpg" alt="" /></a>
+		    		    <a class="aw-user-name" data-id="29" href="http://wenda.golaravel.com/people/FiveSay" rel="nofollow"><img src="{{ message.img.url }}" alt="" /></a>
+		    		    <a class="aw-user-name" data-id="5015" href="http://wenda.golaravel.com/people/%E5%94%AF%E7%BE%8E%E8%A1%97%E6%8B%8D" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-mid-img.png" alt="" /></a>
 		    		</div>
 
 		<p>
-												<a href="http://wenda.golaravel.com/people/Eearnp" class="aw-user-name" data-id="5417">Eearnp</a>
-				<span class="text-color-999">回复了问题 • 3 人关注 • 2 个回复 • 15008 次浏览 • 2018-02-09 16:11				</span>
+												<a href="http://wenda.golaravel.com/people/%E5%94%AF%E7%BE%8E%E8%A1%97%E6%8B%8D" class="aw-user-name" data-id="5015">唯美街拍</a>
+				<span class="text-color-999">回复了问题 • 3 人关注 • 2 个回复 • 7218 次浏览 • 2017-06-29 15:54				</span>
 									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
 		</p>
 
 			</div>
 </div>
-<div class="aw-item " data-topic-id="526,">
-	<a class="aw-user-name hidden-xs" data-id="683" href="http://wenda.golaravel.com/people/Usual" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/06/83_avatar_max.jpg" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/question/718">如果想创建一个像 url 这种的全局函数应该怎样做？</a>
-					</h4>
-				<div class="pull-right hidden-xs contribute">
-			<span class="pull-right text-color-999">贡献</span>
-		    		    <a class="aw-user-name" data-id="758" href="http://wenda.golaravel.com/people/yushi" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/07/58_avatar_mid.jpg" alt="" /></a>
-		    		    <a class="aw-user-name" data-id="839" href="http://wenda.golaravel.com/people/zhuzhichao" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/08/39_avatar_mid.jpg" alt="" /></a>
-		    		</div>
-
-		<p>
-												<a href="http://wenda.golaravel.com/people/Eearnp" class="aw-user-name" data-id="5417">Eearnp</a>
-				<span class="text-color-999">回复了问题 • 6 人关注 • 3 个回复 • 14091 次浏览 • 2018-02-09 16:10				</span>
-									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item article" data-topic-id="1198,57,">
-	<a class="aw-user-name hidden-xs" data-id="5417" href="http://wenda.golaravel.com/people/Eearnp" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/54/17_avatar_max.jpg" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/article/350">[ 拓展包: laravel-google-authenticator ] 通过Google身份验证器为你的网站打造一个动态手机令牌</a>
-					</h4>
-
-		<p>
-										<a href="http://wenda.golaravel.com/people/Eearnp" class="aw-user-name">Eearnp</a> <span class="text-color-999">发表了文章 • 0 个评论 • 1132 次浏览 • 2017-11-07 23:06</span>
-						<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item " data-topic-id="473,">
-	<a class="aw-user-name hidden-xs" data-id="973" href="http://wenda.golaravel.com/people/Maybe" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/question/638">laravel5  如何开发扩展包？</a>
-					</h4>
-				<div class="pull-right hidden-xs contribute">
-			<span class="pull-right text-color-999">贡献</span>
-		    		    <a class="aw-user-name" data-id="176" href="http://wenda.golaravel.com/people/bantes" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/01/76_avatar_mid.jpg" alt="" /></a>
-		    		    <a class="aw-user-name" data-id="5417" href="http://wenda.golaravel.com/people/Eearnp" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/54/17_avatar_mid.jpg" alt="" /></a>
-		    		</div>
-
-		<p>
-												<a href="http://wenda.golaravel.com/people/Eearnp" class="aw-user-name" data-id="5417">Eearnp</a>
-				<span class="text-color-999">回复了问题 • 4 人关注 • 2 个回复 • 4416 次浏览 • 2017-11-07 22:59				</span>
-									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item article" data-topic-id="856,">
-	<a class="aw-user-name hidden-xs" data-id="3675" href="http://wenda.golaravel.com/people/peng" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/36/75_avatar_max.jpg" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/article/349">buibu</a>
-					</h4>
-
-		<p>
-										<a href="http://wenda.golaravel.com/people/peng" class="aw-user-name">peng</a> <span class="text-color-999">发表了文章 • 0 个评论 • 448 次浏览 • 2017-10-29 21:41</span>
-						<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item " data-topic-id="1193,1194,1195,496,1196,">
-	<a class="aw-user-name hidden-xs" data-id="4945" href="http://wenda.golaravel.com/people/_kit" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/question/2622">throttle中间件如何限制每个用户的访问频率</a>
-					</h4>
-				<div class="pull-right hidden-xs contribute">
-			<span class="pull-right text-color-999">贡献</span>
-		    		    <a class="aw-user-name" data-id="138" href="http://wenda.golaravel.com/people/sueysok" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-mid-img.png" alt="" /></a>
-		    		</div>
-
-		<p>
-												<a href="http://wenda.golaravel.com/people/sueysok" class="aw-user-name" data-id="138">sueysok</a>
-				<span class="text-color-999">回复了问题 • 2 人关注 • 1 个回复 • 760 次浏览 • 2017-10-20 13:45				</span>
-									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item " data-topic-id="918,">
-	<a class="aw-user-name hidden-xs" data-id="1867" href="http://wenda.golaravel.com/people/kuiye" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/question/1500">请问增么使用第三方SDK？</a>
-					</h4>
-				<div class="pull-right hidden-xs contribute">
-			<span class="pull-right text-color-999">贡献</span>
-		    		    <a class="aw-user-name" data-id="1728" href="http://wenda.golaravel.com/people/%E7%88%AC%E8%A1%8C%E7%9A%84%E5%A4%A7%E7%88%B7" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/17/28_avatar_mid.jpg" alt="" /></a>
-		    		    <a class="aw-user-name" data-id="1888" href="http://wenda.golaravel.com/people/kailuo99" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-mid-img.png" alt="" /></a>
-		    		</div>
-
-		<p>
-												<a href="http://wenda.golaravel.com/people/Eearnp" class="aw-user-name" data-id="5417">Eearnp</a>
-				<span class="text-color-999">回复了问题 • 4 人关注 • 3 个回复 • 4434 次浏览 • 2017-10-17 13:52				</span>
-									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item " data-topic-id="448,">
-	<a class="aw-user-name hidden-xs" data-id="936" href="http://wenda.golaravel.com/people/xiangzi" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/question/538">redis laravel5 predis</a>
-					</h4>
-				<div class="pull-right hidden-xs contribute">
-			<span class="pull-right text-color-999">贡献</span>
-		    		    <a class="aw-user-name" data-id="678" href="http://wenda.golaravel.com/people/xlimit" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-mid-img.png" alt="" /></a>
-		    		    <a class="aw-user-name" data-id="950" href="http://wenda.golaravel.com/people/webclz" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-mid-img.png" alt="" /></a>
-		    		</div>
-
-		<p>
-												<a href="http://wenda.golaravel.com/people/Eearnp" class="aw-user-name" data-id="5417">Eearnp</a>
-				<span class="text-color-999">回复了问题 • 4 人关注 • 4 个回复 • 17179 次浏览 • 2017-10-11 22:24				</span>
-									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item " data-topic-id="1180,">
-	<a class="aw-user-name hidden-xs" data-id="5001" href="http://wenda.golaravel.com/people/%E5%A4%A9%E4%BA%AE%E4%BA%86" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/50/01_avatar_max.jpg" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/question/2613">mac中 Laravel中Homestead中的项目开发用什么开发工具啊</a>
-					</h4>
-				<div class="pull-right hidden-xs contribute">
-			<span class="pull-right text-color-999">贡献</span>
-		    		    <a class="aw-user-name" data-id="38" href="http://wenda.golaravel.com/people/bailitushu" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/00/38_avatar_mid.jpg" alt="" /></a>
-		    		    <a class="aw-user-name" data-id="535" href="http://wenda.golaravel.com/people/kelson" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/05/35_avatar_mid.jpg" alt="" /></a>
-		    		</div>
-
-		<p>
-												<a href="http://wenda.golaravel.com/people/kelson" class="aw-user-name" data-id="535">kelson</a>
-				<span class="text-color-999">回复了问题 • 3 人关注 • 2 个回复 • 931 次浏览 • 2017-09-21 09:05				</span>
-									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item active" data-topic-id="1197,57,283,58,">
-	<a class="aw-user-name hidden-xs" data-id="4945" href="http://wenda.golaravel.com/people/_kit" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/question/2623">laravel请求服务器返回的头信息的时区不正确</a>
-					</h4>
-				<a href="http://wenda.golaravel.com/question/2623#!answer_form" class="pull-right text-color-999">回复</a>
-
-		<p>
-																<a href="http://wenda.golaravel.com/people/_kit" class="aw-user-name">_kit</a>
-				<span class="text-color-999">发起了问题 • 1 人关注 • 0 个回复 • 653 次浏览 • 2017-09-13 09:14
-				</span>
-									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item article" data-topic-id="1009,95,1192,">
-	<a class="aw-user-name hidden-xs" data-id="478" href="http://wenda.golaravel.com/people/a78925880" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/04/78_avatar_max.jpg" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/article/348">关于模型查询where('num1','&lt;','num2') 奇葩问题</a>
-					</h4>
-
-		<p>
-										<a href="http://wenda.golaravel.com/people/a78925880" class="aw-user-name">a78925880</a> <span class="text-color-999">发表了文章 • 2 个评论 • 401 次浏览 • 2017-09-12 14:50</span>
-						<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item article" data-topic-id="1189,1190,1191,">
-	<a class="aw-user-name hidden-xs" data-id="38" href="http://wenda.golaravel.com/people/bailitushu" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/00/38_avatar_max.jpg" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/article/347">Laravel5.5免费视频教程</a>
-					</h4>
-
-		<p>
-										<a href="http://wenda.golaravel.com/people/bailitushu" class="aw-user-name">百里屠苏</a> <span class="text-color-999">发表了文章 • 0 个评论 • 1706 次浏览 • 2017-09-10 02:52</span>
-						<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
-<div class="aw-item " data-topic-id="23,16,15,24,">
-	<a class="aw-user-name hidden-xs" data-id="2" href="http://wenda.golaravel.com/people/wangsai" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/00/02_avatar_max.jpg" alt="" /><i class="icon icon-v"></i></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/question/18">大家试试 Composer 全量国内镜像吧</a>
-					</h4>
-				<div class="pull-right hidden-xs contribute">
-			<span class="pull-right text-color-999">贡献</span>
-		    		    <a class="aw-user-name" data-id="538" href="http://wenda.golaravel.com/people/steptn" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-mid-img.png" alt="" /></a>
-		    		    <a class="aw-user-name" data-id="7" href="http://wenda.golaravel.com/people/%E6%98%9F%E6%9E%AB" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/00/07_avatar_mid.jpg" alt="" /></a>
-		    		</div>
-
-		<p>
-												<a href="http://wenda.golaravel.com/people/duzhenlin" class="aw-user-name" data-id="3335">duzhenlin</a>
-				<span class="text-color-999">回复了问题 • 60 人关注 • 66 个回复 • 85960 次浏览 • 2017-07-25 09:57				</span>
-									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
+                                {%endfor %}
 <div class="aw-item active" data-topic-id="1186,7,1187,57,">
 	<a class="aw-user-name hidden-xs" data-id="5675" href="http://wenda.golaravel.com/people/jungle" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
 		<h4>
@@ -274,25 +76,7 @@
 
 			</div>
 </div>
-<div class="aw-item " data-topic-id="299,">
-	<a class="aw-user-name hidden-xs" data-id="613" href="http://wenda.golaravel.com/people/ssoor" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
-		<h4>
-						<a href="http://wenda.golaravel.com/question/337">laravel 怎么实现 302 301 跳转功能,php 的 header 指定的会被覆盖成200 OK</a>
-					</h4>
-				<div class="pull-right hidden-xs contribute">
-			<span class="pull-right text-color-999">贡献</span>
-		    		    <a class="aw-user-name" data-id="29" href="http://wenda.golaravel.com/people/FiveSay" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/00/29_avatar_mid.jpg" alt="" /></a>
-		    		    <a class="aw-user-name" data-id="5015" href="http://wenda.golaravel.com/people/%E5%94%AF%E7%BE%8E%E8%A1%97%E6%8B%8D" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-mid-img.png" alt="" /></a>
-		    		</div>
 
-		<p>
-												<a href="http://wenda.golaravel.com/people/%E5%94%AF%E7%BE%8E%E8%A1%97%E6%8B%8D" class="aw-user-name" data-id="5015">唯美街拍</a>
-				<span class="text-color-999">回复了问题 • 3 人关注 • 2 个回复 • 7218 次浏览 • 2017-06-29 15:54				</span>
-									<span class="text-color-999 related-topic hide"> •  来自相关话题</span>
-		</p>
-
-			</div>
-</div>
 <div class="aw-item " data-topic-id="">
 	<a class="aw-user-name hidden-xs" data-id="4141" href="http://wenda.golaravel.com/people/rencongcong" rel="nofollow"><img src="http://wenda.golaravel.com/uploads/avatar/000/00/41/41_avatar_max.jpg" alt="" /></a>	<div class="aw-question-content">
 		<h4>
