--- a/energy/templates/energy/form_template.html
+++ b/energy/templates/energy/form_template.html
@@ -10,7 +10,7 @@
                     <label class="control-label col-sm-2"for="id_username">title:</label>
 
                     <div class="col-sm-10">
-                        <input type="text" id="id_username" required="required" maxlength="30" name="username">
+                        <input type="text" id="id_username" required="required" maxlength="30" name="title">
                     </div>
                     </div>
 
@@ -33,20 +33,13 @@
                 <label class="control-label col-sm-2">请选择发布类型:</label>
 
                     <div class="col-sm-2">
-                        <select style="width: 300px; font-size: 14px">
+                        <select style="width: 300px; font-size: 14px" name="type">
 
                             {% for type in all_types %}
-                                            <option value="{{ type }}">{{ type }}</option>
+                                            <option value="{{ type }}" name="{{ type.name }}">{{ type }}</option>
                                 {% endfor %}
                         </select>
 
                     </div>
                 </div>
 
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-success">
-                    submit
-                    </button>
-                    </div>
-                </div>
