--- a/energy/templates/energy/forum.html
+++ b/energy/templates/energy/forum.html
@@ -43,7 +43,7 @@
 <div class="aw-item " data-topic-id="299,">
 	<a class="aw-user-name hidden-xs" data-id="613" href="http://wenda.golaravel.com/people/ssoor" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
 		<h4>
-						<a href="#">{{ message.title }}</a>
+						<a href=" {% url 'energy:detail' message.id%}">{{ message.title }}</a>
 					</h4>
 				<div class="pull-right hidden-xs contribute">
 			<span class="pull-right text-color-999">贡献</span>
