--- a/energy/templates/energy/base.html
+++ b/energy/templates/energy/base.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">sad</a>
+            <a class="navbar-brand active" href="#">节能校园</a>
         </div>
 
      <div class="collapse navbar-collapse">
@@ -36,7 +36,7 @@
               <li class="active"><a href="{% url 'energy:index' %}">主页</a></li>
 {#                        注册用户#}
 
-              <li><a href="{% url "energy:submit_msg" %}">提交问题</a></li>
+              <li><a href="{% url 'energy:submit_msg' %}">提交问题</a></li>
 
                            {% if user.is_authenticated %}
                    <li class="active"><a href="{% url 'energy:Logout' %}">注销</a></li>
@@ -46,23 +46,23 @@
 
 
                         {% endif %}
-              <li><a href="#contact">联系我们</a></li>
+              <li><a href="{% url "energy:article" %}?page_id=1">文章专栏</a></li>
                         <li><a href="{% url "energy:forum" %}">论坛</a></li>
                         <li><a href="#about">关于</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">下拉菜单 <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li class="nav-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
+{#              <li class="dropdown">#}
+{#                <a href="#" class="dropdown-toggle" data-toggle="dropdown">下拉菜单 <b class="caret"></b></a>#}
+{#                <ul class="dropdown-menu">#}
+{#                  <li><a href="#">Action</a></li>#}
+{#                  <li><a href="#">Another action</a></li>#}
+{#                  <li><a href="#">Something else here</a></li>#}
+{#                  <li class="divider"></li>#}
+{#                  <li class="nav-header">Nav header</li>#}
+{#                  <li><a href="#">Separated link</a></li>#}
+{#                  <li><a href="#">One more separated link</a></li>#}
+{#                </ul>#}
+{#              </li>#}
               <form class="navbar-form pull-right">
-              <input class="span2" type="text" placeholder="请输入搜索内容">
+              <input class="input-sm" type="text" placeholder="请输入搜索内容">
               <button type="submit" class="btn">搜索</button>
             </form>
             </ul>
@@ -77,8 +77,8 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Example headline.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Sign up today</a>
+              <p class="lead">sad</p>
+              <a class="btn btn-large btn-primary" href="#">访问专栏</a>
             </div>
           </div>
         </div>
@@ -86,9 +86,9 @@
           <img src="{% static 'energy/images/1_6.jpg' %}" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Learn more</a>
+              <h1>A </h1>
+              <p class="lead">.</p>
+              <a class="btn btn-large btn-primary" href="#"></a>
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>One more for good measure.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p class="lead"> </p>
               <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
             </div>
           </div>
@@ -109,38 +109,6 @@
     </nav>
     {% block body_block %}
 {% endblock %}
-
-{##}
-{#    <div class="container">#}
-{##}
-{#      <!-- Main hero unit for a primary marketing message or call to action -->#}
-{#      <div class="hero-unit">#}
-{#        <h1>Hello, world!</h1>#}
-{#        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>#}
-{#        <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>#}
-{#      </div>#}
-{##}
-{#      <!-- Example row of columns -->#}
-{#      <div class="row">#}
-{#        <div class="span4">#}
-{#          <h2>Heading</h2>#}
-{#          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>#}
-{#          <p><a class="btn" href="#">View details &raquo;</a></p>#}
-{#        </div>#}
-{#        <div class="span4">#}
-{#          <h2>Heading</h2>#}
-{#          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>#}
-{#          <p><a class="btn" href="#">View details &raquo;</a></p>#}
-{#       </div>#}
-{#        <div class="span4">#}
-{#          <h2>Heading</h2>#}
-{#          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>#}
-{#          <p><a class="btn" href="#">View details &raquo;</a></p>#}
-{#        </div>#}
-{#      </div>#}
-{##}
-{#      <hr>#}
-{##}
  <div class="panel-footer">
       <footer class="aw-footer-wrap">
         <p>&copy; Company 2013</p>
