--- a/energy/templates/energy/detail.html
+++ b/energy/templates/energy/detail.html
@@ -1,6 +1,7 @@
 {% extends 'energy/base.html' %}
-
+{% load  staticfiles %}
 {% block body_block %}
+
 
 
 <div class="aw-container-wrap">
@@ -11,7 +12,7 @@
 					<div class="aw-mod aw-topic-bar" id="question_topic_editor" data-type="article" data-id="346">
 						<div class="tag-bar clearfix">
 																					<span class="topic-tag">
-								<a class="text" href="http://wenda.golaravel.com/topic/laravel" data-id="57">laravel</a>
+								<a class="text" href="http://wenda.golaravel.com/topic/laravel" data-id="57">帖子</a>
 							</span>
 
 													</div>
@@ -19,15 +20,18 @@
 					<div class="aw-mod aw-question-detail">
 						<div class="mod-head">
 							<h1>
-								{{ message.title}}					</h1>
+                                    {{ message.title }}
+                            </h1>
 
 													</div>
 						<div class="mod-body">
 							<div class="content markitup-box">
-								用laravel5.4写了个博客。欢迎大家来访与测试<br />
-<a href="http://www.ice-breaker.cn" rel="nofollow" target="_blank">www.ice-breaker.cn</a>
-
-															</div>
+								{{ message.content }}<br />
+{#<a href="http://www.ice-breaker.cn" rel="nofollow" target="_blank">www.ice-breaker.cn</a>#}
+                                {% if message.img %}
+                                              <img src="{{ message.img.url}}" class="img-responsive">
+                                {% endif %}
+                                    </div>
 							<div class="meta clearfix">
 								<div class="aw-article-vote pull-left disabled">
 									<a href="javascript:;" class="agree" onclick="AWS.User.article_vote($(this), 346, 1);"><i class="icon icon-agree"></i> <b>0</b></a>
@@ -60,7 +64,13 @@
 					<!-- 文章评论 -->
 					<div class="aw-mod">
 						<div class="mod-head common-head">
+                            —{% if comment %}
+                            {% for comm in comment %}
+                                <h3> 评论:{{ comm.content }}</h3>
+                            {% endfor %}
+                            {% else %}
 							<h2>0 个评论</h2>
+                            {% endif %}
 						</div>
 
 
@@ -88,7 +98,7 @@
 									<a href="http://wenda.golaravel.com/people/joychi"><img alt="joychi" src="http://wenda.golaravel.com/static/common/avatar-mid-img.png" /></a>
 								</dt>
 								<dd class="pull-left">
-									<a class="aw-user-name" href="http://wenda.golaravel.com/people/joychi" data-id="5192">joychi</a>																		<p></p>
+									<a class="aw-user-name" href="http://wenda.golaravel.com/people/joychi" data-id="5192">{{ message.user }}</a>																		<p></p>
 								</dd>
 							</dl>
 						</div>
@@ -103,17 +113,17 @@
 							<h3>推荐内容</h3>
 						</div>
 						<div class="mod-body">
-							<ul>
-																<li>
-																		<a href="http://wenda.golaravel.com/article/240">laravel 5.0 artisan 命令列表（中文简体）</a>
-																	</li>
-																<li>
-																		<a href="http://wenda.golaravel.com/question/286">求救 Laravel 请求莫名超时</a>
-																	</li>
-																<li>
-																		<a href="http://wenda.golaravel.com/article/24">分享一个小窍门吧，让你们clone laravel更快</a>
-																	</li>
-															</ul>
+{#							<ul>#}
+{#																<li>#}
+{#																		<a href="http://wenda.golaravel.com/article/240">laravel 5.0 artisan 命令列表（中文简体）</a>#}
+{#																	</li>#}
+{#																<li>#}
+{#																		<a href="http://wenda.golaravel.com/question/286">求救 Laravel 请求莫名超时</a>#}
+{#																	</li>#}
+{#																<li>#}
+{#																		<a href="http://wenda.golaravel.com/article/24">分享一个小窍门吧，让你们clone laravel更快</a>#}
+{#																	</li>#}
+{#															</ul>#}
 						</div>
 					</div>
 					<!-- end 推荐内容 -->
@@ -124,19 +134,19 @@
 							<h3>相关问题</h3>
 						</div>
 						<div class="mod-body">
-							<ul>
-																<li><a href="http://wenda.golaravel.com/question/18">大家试试 Composer 全量国内镜像吧</a></li>
-																<li><a href="http://wenda.golaravel.com/question/724">关于laravel5文件上传的问题</a></li>
-																<li><a href="http://wenda.golaravel.com/question/145">Laravel5.0 是还没有定案么，还是说现在就已经这样了，感觉文件复杂了，写起来也变得麻烦了……</a></li>
-																<li><a href="http://wenda.golaravel.com/question/24">希望出一个cms供大家学习</a></li>
-																<li><a href="http://wenda.golaravel.com/question/237">求解贴，大家看过来，表单里多行数组形式的数据，后台该如何获取</a></li>
-																<li><a href="http://wenda.golaravel.com/question/1436">谁有laravel5的视频教程？</a></li>
-																<li><a href="http://wenda.golaravel.com/question/782">急死了，求帮忙！新人laravel5配置问题</a></li>
-																<li><a href="http://wenda.golaravel.com/question/1530">请问laravel5.0自带分页伪静态如实现？</a></li>
-																<li><a href="http://wenda.golaravel.com/question/1499"> laravel5.1  如何返回上一步insert 操作产生的ID</a></li>
-																<li><a href="http://wenda.golaravel.com/question/285">本地测试正常 怎么上传服务器 打开就白屏了呢</a></li>
-																<li><a href="http://wenda.golaravel.com/question/690">请问laravel5的验证码怎么弄？</a></li>
-															</ul>
+{#							<ul>#}
+{#																<li><a href="http://wenda.golaravel.com/question/18">大家试试 Composer 全量国内镜像吧</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/724">关于laravel5文件上传的问题</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/145">Laravel5.0 是还没有定案么，还是说现在就已经这样了，感觉文件复杂了，写起来也变得麻烦了……</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/24">希望出一个cms供大家学习</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/237">求解贴，大家看过来，表单里多行数组形式的数据，后台该如何获取</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/1436">谁有laravel5的视频教程？</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/782">急死了，求帮忙！新人laravel5配置问题</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/1530">请问laravel5.0自带分页伪静态如实现？</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/1499"> laravel5.1  如何返回上一步insert 操作产生的ID</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/285">本地测试正常 怎么上传服务器 打开就白屏了呢</a></li>#}
+{#																<li><a href="http://wenda.golaravel.com/question/690">请问laravel5的验证码怎么弄？</a></li>#}
+{#															</ul>#}
 						</div>
 					</div>
 					<!-- end 相关问题 -->
