--- a/energy/templates/energy/Login.html
+++ b/energy/templates/energy/Login.html
@@ -32,6 +32,16 @@
                     </div>
 
                     <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <img src="/ver_code/{{ to }}">
+
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-success">
                     submit
