--- a/energy/templates/energy/Login.html
+++ b/energy/templates/energy/Login.html
@@ -19,7 +19,7 @@
                     <label class="control-label col-sm-2" for="id_username">Username:</label>
 
                     <div class="col-sm-10">
-                        <input type="text" id="id_username" maxlength="30" name="username">
+                        <input class="input-group" type="text" id="id_username" maxlength="30" name="username">
                     </div>
                     </div>
 
@@ -32,29 +32,26 @@
                     </div>
 
                     <div class="form-group">
-                        <div class="input-group">
                             <div class="input-group-addon">
-                                <img src="/ver_code/{{ to }}">
-
+                                <img src="{% url 'energy:yanzheng' %}" onclick="refresh(this)">
+                                <label class="label" style="color: #c9302c">请输入验证码:</label>
+                                <input class="input-group-sm" name="ver_code">
+                                &nbsp; &nbsp;
+                                  <button type="submit" class="btn btn-success">submit</button>
 
                             </div>
-                        </div>
-
+                            <script>
+                                function refresh(ths) {
+            ths.src+='?';
+                                }
+                            </script>
                     </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-success">
-                    submit
-                    </button>
-                    </div>
-                </div>
             </form>
         </div>
     {% if error %}
     <div class="panel-footer">
     {{ error }}
     </div>
-
     {% endif %}
     <div class="panel-footer">
     Don't you have a account?
