--- a/energy/templates/energy/detail.html
+++ b/energy/templates/energy/detail.html
@@ -81,7 +81,7 @@
 					<!-- 回复编辑器 -->
 					<div class="aw-mod aw-article-replay-box">
 						<a name="answer_form"></a>
-												<p align="center">要回复文章请先<a href="http://wenda.golaravel.com/login/">登录</a>或<a href="http://wenda.golaravel.com/account/register/">注册</a></p>
+												<p align="center">要回复文章请先<a href="{% url 'energy:Login' %}">登录</a>或<a href="{% url 'energy:register' %}">注册</a></p>
 											</div>
 					<!-- end 回复编辑器 -->
 				</div>
